# smart-city-traffic

./: .editorconfig  .gitignore  .prettierignore  EXPLAINER-standalone.html  EXPLAINER.html  LICENSE  Makefile  README.md  commitlint.config.cjs  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
.maestro/: incident-report.yaml
analytics/dbt/: README.md  dbt_project.yml  profiles.yml
analytics/superset/dashboards/: carbon_impact.yaml  executive_overview.yaml  incident_analysis.yaml  segment_performance.yaml
apps/ai-assistant/: .env.example  README.md  pyproject.toml
apps/ai-assistant/tests/: test_chat_loop.py  test_endpoints.py  test_guardrails.py  test_health.py  test_language.py  test_rag.py  test_tools.py
apps/api-gateway/: .env.example  .eslintignore  README.md  package.json  tsconfig.build.json  tsconfig.json
apps/api-gateway/prisma/: schema.prisma
apps/api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/test/: health.e2e-spec.ts
apps/camera-simulator/: README.md  pyproject.toml
apps/camera-simulator/tests/: test_cli.py  test_runner.py  (+2 more)
apps/developer-portal/: README.md  jest.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/federated-coordinator/: .env.example  README.md  pyproject.toml
apps/federated-coordinator/src/federated_coordinator/: __init__.py  config.py  data.py  federated.py  flower_app.py  logging.py  main.py  model.py  secure_agg.py  telemetry.py  train.py
apps/federated-coordinator/tests/: test_api.py  test_federated.py  test_flower_client.py  test_health.py  test_model.py  test_secure_agg.py
apps/frontend/: .env.example  README.md  jest.config.js  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts
apps/ml-prediction/: .env.example  README.md  pyproject.toml
apps/ml-prediction/src/ml_prediction/: __init__.py  config.py  explain.py  grpc_server.py  logging.py  main.py  model_registry.py  telemetry.py  train.py
apps/ml-prediction/src/ml_prediction/models/: anomaly.py  base.py  congestion.py  demand.py
apps/ml-prediction/src/ml_prediction/proto/traffic/v1/: prediction_pb2.py  prediction_pb2_grpc.py
apps/ml-prediction/tests/: conftest.py  test_endpoints.py  test_health.py  test_models.py  test_shap.py  test_train_cli.py
apps/mobile/: .eslintrc.cjs  README.md  app.json  jest.setup.js  package.json  tsconfig.json
apps/realtime-gateway/: .env.example  .eslintrc.cjs  README.md  package.json  tsconfig.build.json  tsconfig.json
apps/rl-optimizer/: .env.example  README.md  pyproject.toml
apps/rl-optimizer/results/: comparison.csv
apps/rl-optimizer/src/rl_optimizer/: __init__.py  baselines.py  config.py  env.py  evaluate.py  intersection.py  logging.py  main.py  recommend.py  telemetry.py  train.py
apps/rl-optimizer/tests/: test_baselines.py  test_env.py  test_health.py  test_intersection.py  test_recommend.py  test_train.py
apps/sensor-ingestion/: .env.example  README.md  pom.xml
apps/sensor-simulator/: .env.example  README.md  pyproject.toml
apps/sensor-simulator/config/: jerusalem.yaml
apps/sensor-simulator/src/simulator/: __init__.py  __main__.py  cli.py  incidents.py  logging.py  model.py  network.py  publishers.py  replay.py  runner.py
apps/sensor-simulator/tests/: test_cli.py  test_model.py  test_network.py  test_replay.py
apps/vision-service/: .env.example  README.md  pyproject.toml
apps/vision-service/src/vision_service/: __init__.py  config.py  consumer.py  detection.py  incidents.py  logging.py  main.py  pipeline.py  snapshots.py  telemetry.py  tracking.py
apps/vision-service/tests/: _frames.py  conftest.py  test_api.py  test_consumer.py  test_detection.py  test_health.py  test_incidents.py  test_pipeline.py  test_tracking.py
apps/voice-gateway/: .env.example  README.md  pyproject.toml
apps/voice-gateway/src/voice_gateway/: __init__.py  assistant_client.py  config.py  logging.py  main.py  stt.py  telemetry.py  tts.py
apps/voice-gateway/tests/: test_health.py  test_synthesize.py  test_transcribe.py  test_websocket.py
docs/: architecture.md  chaos-game-day.md  data-lake.md  deployment.md  ml.md  rl.md  security.md  testing.md
docs/adr/: 0001-monorepo-vs-polyrepo.md  0002-kafka-as-backbone.md  0003-grpc-vs-rest.md  0004-iceberg-for-lake.md  0005-rl-for-signal-control.md  0006-single-schema-owner.md
docs/runbooks/: on-call.md  slos.md
flink/: README.md  cep_incidents.py  kafka_to_iceberg.py  windowed_speed.py
infra/argocd/: app-of-apps.yaml
infra/docker/: ai-assistant.Dockerfile  api-gateway.Dockerfile  camera-simulator.Dockerfile  developer-portal.Dockerfile  federated-coordinator.Dockerfile  frontend.Dockerfile  ml-prediction.Dockerfile  realtime-gateway.Dockerfile  rl-optimizer.Dockerfile  sensor-ingestion.Dockerfile  sensor-simulator.Dockerfile  vision-service.Dockerfile  voice-gateway.Dockerfile
infra/grafana/: README.md
infra/k8s/: manifests.yaml
infra/litmus/: cpu-stress-realtime-gateway.yaml  disk-fill-postgres.yaml  network-loss-kafka.yaml  pod-delete-prediction-service.yaml
infra/loki/: loki-config.yml
infra/mosquitto/: mosquitto.conf
infra/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml  slo_alerts.yml
infra/tempo/: tempo-config.yml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/vault/: README.md  seed.sh
ml/data/: make_dataset.py  training.csv  training.parquet
ml/feature_repo/: feature_store.yaml  features.py
ml/notebooks/: 01_eda.ipynb  02_features.ipynb  03_baseline_xgboost.ipynb  04_lstm_pytorch.ipynb  05_transformer_timeseries.ipynb  06_evaluation_and_shap.ipynb  07_feast_demo.ipynb
neo4j/: README.md
neo4j/cypher/: 01_constraints.cypher  02_shortest_path.cypher  03_centrality.cypher  04_reachability_under_incident.cypher  05_live_weight_update.cypher
scripts/kafka/: create-topics.sh
scripts/load/: api.js  ingestion.js
scripts/seed/: graph_model.py  requirements.txt  seed_neo4j.py  seed_postgres.py
tests/contract/: README.md  package.json  tsconfig.json
(+211 files in other folders)
