[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-city-rl-optimizer"
version = "0.1.0"
description = "DQN/PPO agents trained against a SUMO Gymnasium environment; serves signal-timing recommendations. Lands in Phase 7."
authors = [{ name = "Yousef Hasan Hamda", email = "yousef123hamda@gmail.com" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rl_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
