[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-city-sensor-simulator"
version = "0.1.0"
description = "Generates realistic Jerusalem-area traffic sensor events (rush-hour curves, incidents) over MQTT + HTTP. Lands in Phase 2."
authors = [{ name = "Yousef Hasan Hamda", email = "yousef123hamda@gmail.com" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "paho-mqtt>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "--cov=src/simulator --cov-report=term-missing --cov-fail-under=70"
asyncio_mode = "auto"
pythonpath = ["src"]
