[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-city-vision-service"
version = "0.1.0"
description = "Consumes camera frames from Kafka, runs detection (YOLOv8 / classical) + ByteTrack tracking, detects incidents, and publishes vision.events."
authors = [{ name = "Yousef Hasan Hamda", email = "yousef123hamda@gmail.com" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "kafka-python-ng>=2.2",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
# YOLOv8 inference for real footage; heavy (pulls torch). The synthetic
# detector path needs none of this, so it is opt-in.
yolo = ["ultralytics>=8.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vision_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src/vision_service --cov-report=term-missing --cov-fail-under=70"
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
